# otus-rust-course

./: .editorconfig  Cargo.toml  Makefile.toml  README.md
.github/: checks.yml
.github/workflows/: checks.yml
patterns/: Cargo.toml
patterns-2/: Cargo.toml
patterns-2/src/: commands.rs  common.rs  game_state.rs  main.rs  point.rs
patterns/src/: animated_disc.rs  common.rs  disc.rs  dummy.rs  dyn_dummy.rs  main.rs  plane.rs  ray.rs  report.rs  visitor.rs
smart-home-1/: Cargo.toml
smart-home-1/src/: main.rs
smart-home-10/: Cargo.toml  client.sh
smart-home-10/examples/: client_sh10.rs
smart-home-10/src/: main.rs
smart-home-11/: Cargo.toml
smart-home-11/src/: main.rs  mock-server.rs
smart-home-11/src/common/: accessor.rs  mod.rs  switch_status_enum.rs
smart-home-11/src/smart_outlet/: mod.rs
smart-home-12/: Cargo.toml
smart-home-12/src/: lib.h  lib.rs  main.cpp  main.rs
smart-home-2/: Cargo.toml
smart-home-2/src/: main.rs
smart-home-3/: Cargo.toml
smart-home-3/examples/: home_report.rs  home_report_by.rs  home_report_v3.rs
smart-home-3/src/: lib.rs  main.rs
smart-home-3/tests/: home_tests.rs
smart-home-4/: Cargo.toml
smart-home-4/examples/: home_report.rs  home_report_by.rs  home_report_by_request_type.rs  home_report_v4.rs
smart-home-4/src/: main.rs
smart-home-4/tests/: home_tests.rs
smart-home-5/: Cargo.toml
smart-home-5/src/: main.rs
smart-home-5/tests/: home_tests.rs
smart-home-6/: Cargo.toml
smart-home-7/: Cargo.toml
smart-home-8/: Cargo.toml
smart-home-9/: Cargo.toml
src/: main.rs
(+98 files in other folders)
