[package]
name = "smart-home-11"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smart-home-11"
path = "src/main.rs"

[[bin]]
name = "mock-server-11"
path = "src/mock-server.rs"

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
futures = "0.3"
tokio = { version = "1.20.1", features = ["full"] }
